--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-  --brendColor: #bb042f;
+  --brendColor: #1B1B1B;
   --brendColor-text: #3E3D52;
   --brend-title-font: 'Comfortaa';
   --brend-font: 'Open Sans', sans-serif;
