--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p {
 
 @media (max-width: 768px) {
   h1 {
-    font-size: 18px;
+    font-size: 40px;
     text-align: center;
     color: azure; 
   }
@@ -79,7 +79,16 @@ p {
 
   h2, h3, p {
     color: azure; 
+    font-size: 30px;
   }
-  .content__rotate 
-  { filter: invert(100%); }
+  .img{
+    background-image: url(images/logo-wh.png); }
+
+    .btn-branding {
+      font-size: 30px;
+      background: var(--brendColor);
+      color: azure;
+      border-radius: 5px;
+      margin: 50px 0;
+    }
 }
